<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo_portrait7"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titulo_zona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/TxtZonasMusculares"
        android:textAppearance="@style/EstiloNegrasText"
        android:textSize="25sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="427dp"
        android:background="@drawable/cuerpo_humano" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp" >

            <Button
                android:id="@+id/Button05"
                style="@style/EstiloBlancasTextmin"
                android:layout_width="92dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_style_azul"
                android:onClick="OnClickHombros"
                android:text="@string/TxtHombros" />

            <TextView
                android:id="@+id/txtHoraTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TxtEspacio"
                android:width="125dp" />

            <Button
                android:id="@+id/Button03"
                style="@style/EstiloBlancasTextmin"
                android:layout_width="92dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_style_azul"
                android:onClick="OnClickEspalda"
                android:text="@string/TxtEspalda" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <Button
                android:id="@+id/btnLunes"
                style="@style/EstiloBlancasTextmin"
                android:layout_width="92dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_style_azul"
                android:onClick="OnClickPectorales"
                android:text="@string/TxtEspectorales" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TxtEspacio"
                android:width="10dp" />

            <Button
                android:id="@+id/Button06"
                style="@style/EstiloBlancasTextmin"
                android:layout_width="92dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_style_azul"
                android:onClick="OnClickTriceps"
                android:text="@string/TxtTricep" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp" >

            <Button
                android:id="@+id/Button02"
                style="@style/EstiloBlancasTextmin"
                android:layout_width="92dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_style_azul"
                android:onClick="OnClickBiceps"
                android:text="@string/TxtBiceps" />

            <TextView
                android:id="@+id/txtHorasMartes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TxtEspacio"
                android:width="10dp" />

            <Button
                android:id="@+id/Button04"
                style="@style/EstiloBlancasTextmin"
                android:layout_width="92dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_style_azul"
                android:onClick="OnClickAbdomen"
                android:text="@string/TxtAbdomen" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/TxtDescripcion"
                    android:src="@drawable/tiempo" />

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/TxtTiempoTotal"
                    android:textAppearance="@style/EstiloNegrasTextmin"
                    android:width="90dp" />

                <TextView
                    android:id="@+id/txtTiempoZona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:text="@string/TxtHorasEjemplo2"
                    android:textAppearance="@style/EstiloNegrasTextmin"
                    android:width="70dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TxtEspacio"
                android:width="10dp" />

            <Button
                android:id="@+id/Button07"
                style="@style/EstiloBlancasTextmin"
                android:layout_width="92dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_style_azul"
                android:onClick="OnClickPiernas"
                android:text="@string/TxtPiernas" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp" >
        </TableRow>

    </TableLayout>

</LinearLayout>