<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtNomEjer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:maxWidth="200dp"
        android:text="@string/TxtTrabajoMuscular"
        android:textAppearance="@style/EstiloNegrasText"
        android:width="200dp" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:lines="18"
        android:maxWidth="260dp"
        android:text="@string/TxtDescripcion"
        android:textAppearance="@style/EstiloNegrasTextmin"
        android:width="260dp" />

    <CheckBox
        android:id="@+id/chkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="50dp"
        android:text="@string/TxtSeleccionar"
        android:textStyle="bold" />
 
</LinearLayout>