<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo_portrait7"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titulo_zona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="OnClickDomingo"
        android:text="@string/TxtEntrenamientoSemanal"
        android:textAppearance="@style/EstiloNegrasText"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="53dp"
            android:text="@string/TxtSemana"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/TxtTiempo"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnLunes"
            android:layout_width="138dp"
            android:layout_height="29dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style_azul"
            android:onClick="OnClickLunes"
            android:text="@string/TxtLunes"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHorasLunes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/TxtHorasEjemplo2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnMartes"
            android:layout_width="138dp"
            android:layout_height="29dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style_azul"
            android:onClick="OnClickMartes"
            android:text="@string/TxtMartes"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHorasMartes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/TxtHorasEjemplo2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnMiercoles"
            android:layout_width="138dp"
            android:layout_height="29dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style_azul"
            android:onClick="OnClickMiercoles"
            android:text="@string/TxtMiercoles"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHoraMiercoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/TxtHorasEjemplo2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnJueves"
            android:layout_width="138dp"
            android:layout_height="29dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style_azul"
            android:onClick="OnClickJueves"
            android:text="@string/TxtJueves"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHorasJueves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/TxtHorasEjemplo2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnViernes"
            android:layout_width="138dp"
            android:layout_height="29dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style_azul"
            android:onClick="OnClickViernes"
            android:text="@string/TxtViernes"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHorasViernes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/TxtHorasEjemplo2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSabado"
            android:layout_width="138dp"
            android:layout_height="29dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style_azul"
            android:onClick="OnClickSabado"
            android:text="@string/TxtSabado"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHorasSabado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/TxtHorasEjemplo2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnDomingo"
            android:layout_width="138dp"
            android:layout_height="29dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style_azul"
            android:onClick="OnClickDomingo"
            android:text="@string/TxtDomingo"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHorasDomingo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/TxtHorasEjemplo2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="34dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/tiempo"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/TxtTiempoTotal"
            android:textAppearance="@style/EstiloNegrasText" />

        <TextView
            android:id="@+id/txtHoraTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/TxtHorasEjemplo"
            android:textAppearance="@style/EstiloNegrasText" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_style_azul"
        android:onClick="OnClickEliminarRutina"
        android:text="@string/TxtEliminar"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>