<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo_portrait7"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/diaSemana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/TxtDiaSemana"
        android:textAppearance="@style/EstiloNegrasText"
        android:textSize="25sp" />

    <ListView
        android:id="@+id/listEjeDia"
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent" >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="34dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/tiempo"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/TxtTiempoTotal"
            android:textAppearance="@style/EstiloNegrasText" />

        <TextView
            android:id="@+id/txtHoraTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/TxtHorasEjemplo2"
            android:textAppearance="@style/EstiloNegrasText" />
    </LinearLayout>

    <Button
        android:id="@+id/btnVerRutina"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_style_azul"
        android:onClick="OnClickEditar"
        android:text="@string/TxtEditar"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>