<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo_portrait7"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titulo_ejercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/TxtZonaMuscular"
        android:textAppearance="@style/EstiloNegrasText"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="248dp"
        android:text="@string/TxtTiempo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listEje"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent" >

    </ListView>


    <Button
        android:id="@+id/button2"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_style_azul"
        android:onClick="OnClickGuardar"
        android:text="@string/TxtGuardar"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>