<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_portrait7"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trainerapp.ActivityMenu$PlaceholderFragment" >

    <TextView
        android:id="@+id/titulo_zona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="@string/TxtTrainerApp"
        android:textAppearance="@style/EstiloNegrasText"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="127dp"
        android:layout_height="124dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo_beta3"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style_negro"
            android:onClick="OnClickCrearEntrenamiento"
            android:text="@string/TxtCrearEntrenamiento"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnVerRutina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style_azul"
            android:onClick="OnClickVerRutina"
            android:text="@string/TxtVerRutina"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>